Added by OwlLoong:商品类别管理初步实现

--- a/user/src/main/resources/application.yml
+++ b/user/src/main/resources/application.yml
@@ -6,4 +6,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
   thymeleaf:
     suffix: .html
-
+  application:
+    name: user
+server:
+  port: 8082
